<?xml version="1.0" encoding="utf-8"?>
<com.example.mr_zyl.project.pro.mine.view.SlidingLib.SlidingItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipelayout"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="center_vertical"
    android:minHeight="60dp" >

    <com.example.mr_zyl.project.pro.mine.view.SlidingLib.SlidingContentView
        android:id="@+id/front"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/item_build_default_style"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tv_listviewss_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="item999"/>
        <TextView
            android:id="@+id/tv_listviewss_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="status"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            />
    </com.example.mr_zyl.project.pro.mine.view.SlidingLib.SlidingContentView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_call"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#888888"
            android:gravity="center"
            android:text="@string/call"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_delete"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#ff0000"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@android:color/white" />
    </LinearLayout>

</com.example.mr_zyl.project.pro.mine.view.SlidingLib.SlidingItemLayout>