<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mr_zyl.project824.pro.mine.view.activity.GMapActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                app:elevation="0dp"
                app:expanded="true"
                app:layout_behavior=".pro.mine.view.selfview.CustomBehavior">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <!--加油地图-->
                    <RelativeLayout
                        android:id="@+id/rl_oilstation_mapContent"
                        android:layout_width="match_parent"
                        android:layout_height="340dp"
                        android:layout_marginTop="@dimen/dp220"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="1">

                        <com.example.mr_zyl.project824.pro.mine.view.selfview.MapContainer
                            android:id="@+id/mc_gmap_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.amap.api.maps.TextureMapView
                                android:id="@+id/tmv_current_oilStation"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </com.example.mr_zyl.project824.pro.mine.view.selfview.MapContainer>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_oilstation_topdescMore"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dp32"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="@dimen/dp12"
                            android:layout_marginRight="@dimen/dp12"
                            app:cardCornerRadius="@dimen/dp16"
                            app:cardElevation="@dimen/dp0">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/dp13"
                                android:layout_marginRight="@dimen/dp13"
                                android:text="更多网点"
                                android:textColor="@color/red"
                                android:textSize="@dimen/dp12"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                    <!--加油卡片-->
                    <LinearLayout
                        android:id="@+id/ll_oilstatiion_contentLayout"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:layout_marginTop="370dp"
                        android:layout_marginBottom="15dp"
                        android:background="#88388EDB"
                        android:clickable="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="110dp"
                            android:layout_gravity="center_vertical"
                            android:background="#4400ff00" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="110dp"
                            android:layout_gravity="center_vertical"
                            android:background="#44ff0000" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_gravity="center_vertical"
                            android:background="#440000ff" />

                    </LinearLayout>

                </android.support.design.widget.CollapsingToolbarLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-17dp"
                    android:background="@color/gray2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_home_tablayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp12"
                        android:layout_marginRight="@dimen/dp12"
                        app:cardElevation="0dp">

                        <android.support.design.widget.TabLayout
                            android:id="@+id/tablayout"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp68"
                            app:tabGravity="center"
                            app:tabIndicatorColor="#ffdc2828"
                            app:tabSelectedTextColor="#ffdc2828"
                            app:tabTextAppearance="?android:attr/textAppearanceMediumInverse"
                            app:tabTextColor="#333333">

                            <android.support.design.widget.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="tab1" />

                            <android.support.design.widget.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="tab2" />

                            <android.support.design.widget.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="tab3" />

                        </android.support.design.widget.TabLayout>

                        <View
                            android:id="@+id/v_tablayout_bottomDividing"
                            android:layout_width="match_parent"
                            android:layout_height="0.75dp"
                            android:layout_gravity="bottom"
                            android:background="#30000000"
                            android:visibility="gone" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </android.support.design.widget.AppBarLayout>


            <android.support.v4.widget.NestedScrollView
                android:id="@+id/vp_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:text="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:text="@string/login_qq_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:text="@string/login_sina_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:text="@string/login_tencent_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:text="@string/login_phone_text" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/ll_homeTopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp12"
                android:layout_marginRight="@dimen/dp12"
                app:cardCornerRadius="@dimen/dp6">
                <!--轮播图-->
                <cn.bingoogolapple.bgabanner.BGABanner
                    android:id="@+id/banner_home_top"
                    style="@style/HomeBannerStyle"
                    android:scaleType="fitXY"
                    app:banner_aspectRatio="2.2"
                    app:banner_transitionEffect="defaultEffect" />
                <!--会员卡片-->
                <include layout="@layout/home_view_members_info" />
            </androidx.cardview.widget.CardView>

            <!--首页金刚区布局-->
            <LinearLayout
                android:id="@+id/ll_bgab_home_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="vertical" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
